--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,10 @@
     {% for post in post_list %}
 
     <article>
-        <h2>{{ post.title }}</h2>
+        <h2>
+            <a href="{{ post.get_absolute_url }}"> 
+            {{ post.title }}</h2>
+            </a>
         <p class="date">
             Publicado em {{ post.create }} por {{ post.author }}
         </p>
